--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-@tailwind base
-@tailwind components
-@tailwind utilities
-
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;600;700&family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
